--- a/node.jquery.mobile/index.html
+++ b/node.jquery.mobile/index.html
@@ -1,40 +1,119 @@
-<!DOCTYPE html> 
-<html> 
+<!DOCTYPE html>
+<html class="ui-mobile min-width-320px min-width-480px min-width-768px min-width-1024px landscape">
 	<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>node.jquery,mobile.js</title>
-	<link rel="stylesheet"  href="public/js/jquery.mobile-1.0.1.min.css" />
-	<link rel="stylesheet" href="public/css/jqm-docs.css"/>
-	<script src="public/js/jquery.js"></script>
-	<script src="public/js/jquery.mobile-1.0.1.min.js"></script>
-</head> 
-<body>
-	<div data-role="page" class="type-interior" data-theme="a">
-		<div data-role="header">
-		<h1>node.jquery,mobile.js</h1>
-		<a href="../../../" data-icon="home" data-iconpos="notext" data-direction="reverse" class="ui-btn-right jqm-home">Home</a>
-	</div>
-	<div data-role="content">
-        <div class="content-secondary">
-            <div data-role="collapsible" data-collapsed="true" data-theme="a" data-content-theme="a">
-                <h3>More in this section</h3>
-                <ul data-role="listview" data-theme="a" data-dividertheme="a">
-                    <li data-role="list-divider">Options</li>
-                    <li><a href="login.html"  data-ajax="false">Login</a></li>
-                    <li><a href="../page-template.html" data-ajax="false">Single page template</a></li>
-                    <li><a href="../multipage-template.html" data-ajax="false">Multi-page template</a></li>
-                    <li><a href="../page-titles.html">Page titles</a></li>
-                    <li><a href="../page-links.html">Linking pages</a></li>
-                    <li><a href="../page-cache.html">Prefetching &amp; caching pages</a></li>
-                    <li><a href="../page-navmodel.html">Ajax, hashes &amp; history</a></li>
-                    <li data-theme="b"><a href="../pages-themes.html">Theming pages</a></li>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<base href=".">
+		<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
+		<meta charset="utf-8"> 
+		<title>node.jquery.mobile - home</title> 		
+		<link rel="stylesheet" href="http://jquerymobile.com/demos/1.0a2/docs/pages/_assets/css/jqm-docs.css">
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
+		<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
+
+	</head> 
+	<body class="ui-mobile-viewport">
+		<!-- home page -->
+        <div data-role="page" id="index" class="ui-page ui-body-c ui-page-active" data-dom-cache="true">
+            <div data-role="header" class="ui-bar-a ui-header" role="banner">
+                <a href="#index" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
+                    <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
+                <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">node.jquery.mobile - home</h1>
+            </div>
+            <div data-role="content" class="ui-content" role="main">
+                <h2>node.jquery.mobile - home</h2>
+                <p>welcome to node.jquery.mobile; a node.js boiler plate application</p>
+                <ul data-role="listview" data-inset="true">
+                    <li data-role="list-divider" role="heading" class="ui-li ui-li-divider ui-btn ui-bar-d">options</li>
+                    <li><a href="index.html" data-ajax="false">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="login.html" data-ajax="false">login</a></li>
+                    <li><a href="channels.html" data-ajax="false">channels</a></li>
+                    <li><a href="#contact">contact us</a></li>
+                    <li><a href="#github">github</a></li>
                 </ul>
             </div>
+
+            <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
+                <h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2011 node.jquery.mobile</h4>
+            </div>
         </div>
-    </div>
-    <div data-role="footer" class="footer-docs">
-        <p>&copy; 2011-2012 node.plates project</p>
-    </div>
-</body>
+
+		<!-- about page -->
+		<div data-role="page" id="about" class="ui-page ui-body-c " data-dom-cache="true">
+			<div data-role="header" class="ui-bar-a ui-header" role="banner">
+				<a href="#index" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
+				<span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
+				<h1 class="ui-title" tabindex="0" role="heading" aria-level="1">node.jquery.mobile - about</h1>
+			</div>
+			<div data-role="content" class="ui-content" role="main">	
+				<h2>node.jquery.mobile - about</h2>
+				<p>this boilerplate uses node.js, express, socket.io mongoose and of course jquery.mobile</p>		
+				<ul data-role="listview" data-inset="true">
+					<li data-role="list-divider" role="heading" class="ui-li ui-li-divider ui-btn ui-bar-d">options</li>			
+					<li><a href="index.html" data-ajax="false">home</a></li>
+					<li><a href="#about">about</a></li>
+					<li><a href="login.html" data-ajax="false">login</a></li>
+					<li><a href="channels.html" data-ajax="false">channels</a></li>
+					<li><a href="#contact">contact us</a></li>
+					<li><a href="#github">github</a></li>
+				</ul>
+			</div>	
+			
+			<div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
+				<h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2011 node.jquery.mobile</h4>
+			</div>
+		</div>
+		
+		<!-- contact page -->
+		<div data-role="page" id="contact" class="ui-page ui-body-c " data-dom-cache="true">
+			<div data-role="header" class="ui-bar-a ui-header" role="banner">
+				<a href="#index" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
+				<span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
+				<h1 class="ui-title" tabindex="0" role="heading" aria-level="1">node.jquery.mobile - contact</h1>
+			</div>
+			<div data-role="content" class="ui-content" role="main">	
+				<h2>node.jquery.mobile - contact</h2>
+				<p>contact us here <a href="andrew.keig@gmail.com">andrew dot keig at gmail dot com</a></p>		
+				<ul data-role="listview" data-inset="true">
+					<li data-role="list-divider" role="heading" class="ui-li ui-li-divider ui-btn ui-bar-d">options</li>			
+					<li><a href="index.html" data-ajax="false">home</a></li>
+					<li><a href="#about">about</a></li>
+					<li><a href="login.html" data-ajax="false">login</a></li>
+					<li><a href="channels.html" data-ajax="false">channels</a></li>
+					<li><a href="#contact">contact us</a></li>
+					<li><a href="#github">github</a></li>
+				</ul>
+			</div>	
+			
+			<div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
+				<h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2011 node.jquery.mobile</h4>
+			</div>
+		</div>
+		<!-- contact page -->
+		<div data-role="page" id="github" class="ui-page ui-body-c " data-dom-cache="true">
+			<div data-role="header" class="ui-bar-a ui-header" role="banner">
+				<a href="#index" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
+				<span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
+				<h1 class="ui-title" tabindex="0" role="heading" aria-level="1">node.jquery.mobile - github</h1>
+			</div>
+			<div data-role="content" class="ui-content" role="main">	
+				<h2>node.jquery.mobile - github</h2>
+				<p>download node.jquery.mobile here <a href="andrew.keig@gmail.com">------>>></a></p>		
+				<ul data-role="listview" data-inset="true">
+					<li data-role="list-divider" role="heading" class="ui-li ui-li-divider ui-btn ui-bar-d">options</li>			
+					<li><a href="index.html" data-ajax="false">home</a></li>
+					<li><a href="#about">about</a></li>
+					<li><a href="login.html" data-ajax="false">login</a></li>
+					<li><a href="channels.html" data-ajax="false">channels</a></li>
+					<li><a href="#contact">contact us</a></li>
+					<li><a href="#github">github</a></li>
+				</ul>
+			</div>	
+			
+			<div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
+				<h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2011 node.jquery.mobile</h4>
+			</div>
+		</div>
+	</body>
 </html>
