--- a/node.jquery.mobile/login.html
+++ b/node.jquery.mobile/login.html
@@ -1,52 +1,42 @@
+
 <!DOCTYPE html>
-<html>
+<html class="ui-mobile min-width-320px min-width-480px min-width-768px min-width-1024px landscape">
 	<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>node.jquery,mobile.js</title>
-	<link rel="stylesheet"  href="public/js/jquery.mobile-1.0.1.min.css" />
-	<link rel="stylesheet" href="public/css/jqm-docs.css"/>
-	<script src="public/js/jquery.js"></script>
-	<script src="public/js/jquery.mobile-1.0.1.min.js"></script>
-</head> 
-<body>
-	<div data-role="page" class="type-interior" data-theme="a">
-		<div data-role="header">
-		<h1>node.jquery,mobile.js</h1>
-		<a href="../../" data-icon="home" data-iconpos="notext" data-direction="reverse" class="ui-btn-right jqm-home">Home</a>
-	</div>
-	<div data-role="content">
-            <div class="content-primary">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<base href=".">
+		<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
+		<meta charset="utf-8"> 
+		<title>node.jquery.mobile</title> 		
+		<link rel="stylesheet" href="http://jquerymobile.com/demos/1.0a2/docs/pages/_assets/css/jqm-docs.css">
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
+		<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
+		<script type="text/javascript" src="./public/js/app.js"></script>
+	</head> 
+	<body class="ui-mobile-viewport"> 
+		<div data-role="page" id="index" login="ui-page ui-body-c ui-page-active">
 
-			<h2>Login</h2>
-
-
-			<div data-role="fieldcontain">
-	         <label for="name-a">Username:</label>
-	         <input type="text" name="username" id="username" value=""  />
+			<div data-role="header" class="ui-bar-a ui-header" role="banner">
+				<a href="index.html"  data-ajax="false" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
+				<span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
+				<h1 class="ui-title" tabindex="0" role="heading" aria-level="1">node.jquery.mobile - login</h1>
 			</div>
-
-            <div data-role="fieldcontain">
-                <label for="name-a">Password:</label>
-                <input type="password" name="password" id="password" value=""  />
-            </div>
-
-
-			<div data-role="fieldcontain">
-				<label for="switch-a">Flip switch:</label>
-				<select name="switch-a" id="switch-a" data-role="slider">
-					<option value="off">Logged Uut</option>
-					<option value="on">Logged In</option>
-				</select>
+			<div data-role="content" class="ui-content" role="main">	
+				<h2>login</h2>
+				<p>complete the below to login/register</p>		
+				<div data-role="fieldcontain">
+					<label for="name">username:</label>
+					<input type="text" name="username" id="username" value=""  />
+				</div>	
+				<div data-role="fieldcontain">
+					<label for="name">password:</label>
+					<input type="password" name="password" id="password" value=""  />
+				</div>	
+				<a href="#" data-role="button" data-icon="star">Star button</a>
+			</div>			
+			<div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
+				<h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2011 node.jquery.mobile</h4>
 			</div>
-
-			</div>
-
-			<div data-role="footer" class="footer-docs">
-					<p>&copy; 2011-2012 node.plates project</p>
-			</div>
-
-			</div>
-
-			</body>
-			</html>
+		</div>
+	</body>
+</html>
